<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/editor_padding"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle"/>

        <!-- Input Fields-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:paddingLeft="@dimen/input_field_padding_left"
            android:orientation="vertical">

            <!--Name field-->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Price field-->
                <EditText
                    android:id="@+id/edit_product_price"
                    android:hint="@string/hint_product_price"
                    android:inputType="number"
                    style="@style/EditorFieldStyle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_price_unit"
                    android:text="@string/product_unit_price"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <!-- Quantity field-->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle"/>

            <!--supplier name field-->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="text"
                style="@style/EditorFieldStyle"/>

            <!-- supplier phone field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/hint_supplier_phone"
                android:inputType="text"
                style="@style/EditorFieldStyle"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>